<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background2">

    <ImageButton
        android:id="@+id/imgBtnHelp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <ImageButton
        android:id="@+id/imgBtnInfo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="2dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_info_details" />



    <view
        android:id="@+id/viewLine"
        style="@style/Separator"
        class="android.support.v7.widget.LinearLayoutCompat"
        android:layout_width="270dp"
        android:layout_height="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:background="#FFCDD2"
        android:shadowColor="#fff"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgVSOE"
        android:layout_width="268dp"
        android:layout_height="117dp"
        android:layout_marginEnd="58dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLine"
        app:srcCompat="@drawable/soe_logo" />

    <TextView
        android:id="@+id/tvSOEdes"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="4dp"
        android:shadowColor="#000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="4"
        android:text="@string/SoeMeaning"
        android:textColor="@android:color/background_light"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgVSOE" />

    <TextView
        android:id="@+id/TvSubtitulo"
        android:layout_width="wrap_content"
        android:layout_height="74dp"
        android:layout_marginTop="124dp"
        android:elegantTextHeight="true"
        android:fontFamily="serif-monospace"
        android:text="@string/activity_presentacion_Subtitulo"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:textColor="#EF9A9A"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSOEdes" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="120dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_login_animado"
        android:ems="10"
        android:text="@string/startButton"
        android:textColor="#ffff"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TvSubtitulo"
        app:layout_constraintVertical_bias="0.236" />

    <TextView
        android:id="@+id/TvAviso"
        style="@style/Message"
        android:layout_width="351dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:paddingHorizontal="4dp"
        android:text="@string/activity_presentacion_descripcion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>